tests/error/non_public_typedef_global_scope.gw
#! [contains] NullPtrException
class C {
  typedef void t_ptr();
}
var C.t_ptr ptr;
ptr();
